# libplist

./: .gitignore  CMakeLists.txt
include/: config.h
include/plist/: Dictionary.h  plist.h
libcnary/: CMakeLists.txt
src/: bplist.c  plist.c  plist.h  xplist.c
